Fix swap height align to the sidebar

--- a/src/components/Swap/Swap.css
+++ b/src/components/Swap/Swap.css
@@ -10,9 +10,8 @@
 {
     flex: 50%;
     display: flex;
-    align-items: center;
-    align-content: center;
-    margin-bottom: 20px;
+    align-items: flex-start;
+    margin-top: 100px;
 }
 
 #swap-wrapper #swap-content-wrapper #swap-content-inner-wrapper
